<resources>
    <string name="app_name">Orienteering for dummies</string>
    <string name="title_activity_maps">Map</string>
    <string name="stats_distance_default_text">0.0 m</string>
    <string name="add_wp">Add WP</string>
    <string name="add_cp">Add CP</string>
    <string name="start_stop_track">Start/Stop track</string>
    <string name="compass">compass</string>
    <string name="stats_time_default_text">00:00:00</string>
    <string name="stats_speed_default_text">0 km/h</string>
    <string name="options_reset_track_text">Reset track</string>
    <string name="count_default_text">0</string>
    <string name="distance_hint">DISTANCE</string>
    <string name="avg_elevation_hint">AVG ELEVATION</string>
    <string name="checkpoints_hint">CHECKPOINTS</string>
    <string name="drift_hint">DRIFT</string>
    <string name="elevation_gained_hint">ELEVATION GAINED</string>
    <string name="speed_hint">SPEED</string>
    <string name="save_track_text">Save</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="track_image_description">Track image</string>
    <string name="avg_spd_hint">Avg spd:</string>
    <string name="max_speed_hint">Max spd:</string>
    <string name="history_drift_hint">Drift:</string>
    <string name="history_elevation_gained_hint">Elev gain:</string>
    <string name="history_duration_hint">Duration:</string>
    <string name="history_distance_hint">Distance:</string>
    <string name="replay_spinner_item_none">None</string>
    <string name="track_type_icon_alt">track type icon</string>
    <string name="txt_register">Register</string>
    <string name="register_title">Register</string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_first_name">First name:</string>
    <string name="lbl_last_name">Last name:</string>
    <string name="lbl_username">Username:</string>
    <string name="txt_sync_tracks">Sync tracks</string>
    <string name="settings_logout">Log out</string>
    <string name="txt_toggle_register">Log in instead</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="register_instead">Register instead</string>
    <string name="login_instead">Log in instead</string>
    <string name="auto_sync_tracks">Auto sync tracks</string>
    <string name="sync_interval">Sync Interval</string>
    <string name="pace_vs_speed">Use pace instead of speed</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_rename">RENAME</string>
    <string name="train_count">Train count</string>
</resources>
