<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/padding_small">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_data_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_corners">


        <ee.taltech.orienteering.component.view.TrackIconImageView
            android:id="@+id/track_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/track_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/column_a"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/track_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:background="@drawable/rounded_corners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/track_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/track_name"
                style="@style/HistoryInfoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/track_type_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_activity_24px"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/padding_small"
                android:contentDescription="@string/track_type_icon_alt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/column_a"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/column_b"
            app:layout_constraintStart_toEndOf="@id/track_image"
            app:layout_constraintTop_toBottomOf="@id/track_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryInfoHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_distance_hint" />

                <TextView
                    android:id="@+id/distance"
                    style="@style/HistoryInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_distance_default_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryInfoHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_duration_hint" />

                <TextView
                    android:id="@+id/duration"
                    style="@style/HistoryInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_time_default_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryInfoHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_elevation_gained_hint" />

                <TextView
                    android:id="@+id/elevation_gained"
                    style="@style/HistoryInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_distance_default_text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@id/column_b"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/column_a"
            app:layout_constraintTop_toBottomOf="@id/track_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryInfoHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_spd_hint" />

                <TextView
                    android:id="@+id/avg_speed"
                    style="@style/HistoryInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_speed_default_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryInfoHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_speed_hint" />

                <TextView
                    android:id="@+id/max_speed"
                    style="@style/HistoryInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_speed_default_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/HistoryInfoHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history_drift_hint" />

                <TextView
                    android:id="@+id/drift"
                    style="@style/HistoryInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_distance_default_text" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/history_data_container"
        android:background="#191919"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_delete"
            android:text="@string/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HistoryEditButton"
            android:background="@color/color_danger"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_rename"/>

        <Button
            android:id="@+id/btn_rename"
            android:text="@string/btn_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HistoryEditButton"
            android:background="@color/color_ocean"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_delete"
            app:layout_constraintEnd_toStartOf="@id/btn_export"/>
        <Button
            android:id="@+id/btn_export"
            android:text="EXPORT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HistoryEditButton"
            android:background="#009688"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_rename"
            app:layout_constraintEnd_toStartOf="@id/spinner_replay"/>

        <Spinner
            android:id="@+id/spinner_replay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_corners"
            android:layout_margin="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_export"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>