<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/txt_title"
        style="@style/SettingsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/register_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email_lbl"
        style="@style/SettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        app:layout_constraintEnd_toStartOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        android:labelFor="@id/txt_email" />

    <EditText
        android:id="@+id/txt_email"
        style="@style/SettingsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/txt_email_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_email_lbl"
        app:layout_constraintTop_toTopOf="@id/txt_email_lbl"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txt_password_lbl"
        style="@style/SettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_password"
        android:text="@string/lbl_password"
        app:layout_constraintEnd_toStartOf="@id/txt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email_lbl" />

    <EditText
        android:id="@+id/txt_password"
        style="@style/SettingsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@id/txt_password_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_password_lbl"
        app:layout_constraintTop_toTopOf="@id/txt_password_lbl" />

    <TextView
        android:id="@+id/txt_username_lbl"
        style="@style/SettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_username"
        app:layout_constraintEnd_toStartOf="@id/txt_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_password_lbl"
        android:labelFor="@id/txt_username" />

    <EditText
        android:id="@+id/txt_username"
        style="@style/SettingsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/txt_username_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_username_lbl"
        app:layout_constraintTop_toTopOf="@id/txt_username_lbl"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txt_first_name_lbl"
        style="@style/SettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_first_name"
        android:text="@string/lbl_first_name"
        app:layout_constraintEnd_toStartOf="@id/txt_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_username_lbl" />

    <EditText
        android:id="@+id/txt_first_name"
        style="@style/SettingsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/txt_first_name_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_first_name_lbl"
        app:layout_constraintTop_toTopOf="@id/txt_first_name_lbl" />

    <TextView
        android:id="@+id/txt_last_name_lbl"
        style="@style/SettingsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/txt_last_name"
        android:text="@string/lbl_last_name"
        app:layout_constraintEnd_toStartOf="@id/txt_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_first_name_lbl" />

    <EditText
        android:id="@+id/txt_last_name"
        style="@style/SettingsEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@id/txt_last_name_lbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_last_name_lbl"
        app:layout_constraintTop_toTopOf="@id/txt_last_name_lbl" />

    <Button
        android:id="@+id/toggle_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_toggle_register"
        android:padding="@dimen/padding_small"
        android:textColor="@color/text_light"
        android:background="#00000000"
        app:layout_constraintTop_toBottomOf="@id/txt_last_name_lbl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/padding_small"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:background="@drawable/rounded_corners"
        android:padding="@dimen/padding_small"
        android:text="@string/txt_register"
        android:textColor="@color/text_purple"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>